large nepal files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ JBA/Ghana/E635900/FLRF/keys_data/areaperil_dict.csv
 JBA/Ghana/E760461/FLRF/keys_data/areaperil_dict.csv
 JBA/Nepal/E505423/FLRF/keys_data/areaperil_dict.csv
 JBA/Nepal/E151185/FLRF/keys_data/areaperil_dict.csv
+./JBA/Nepal/E505423/FLRF/model_data/footprint.csv
+./JBA/Nepal/E505423/FLRF/keys_data/areaperil_dict.csv
+./JBA/Nepal/E151185/FLRF/model_data/footprint.csv
+./JBA/Nepal/E151185/FLRF/keys_data/areaperil_dict.csv
+./JBA/Nepal/E432557/FLRF/keys_data/areaperil_dict.csv
