--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ JBA/Philippines-Taiwan/FLRF/U/model_data/footprint.csv
 JBA/Philippines-Taiwan/FLRF/U/keys_data/areaperil_dict.csv
 JBA/Philippines-Taiwan/FLRF/D/model_data/footprint.csv
 JBA/Philippines-Taiwan/FLRF/D/keys_data/areaperil_dict.csv
+JBA/Ghana/E635900/FLRF/keys_data/areaperil_dict.parquet
+JBA/Ghana/E760461/FLRF/keys_data/areaperil_dict.parquet
