jba-nepal multiperil footprints nepal

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ JBA/Ghana/E760461/combined/keys_data/areaperil_dict.csv
 JBA/Ghana/E760461/combined/keys_data/areaperil_dict.parquet
 JBA/Ghana/E689982/combined/model_data/footprint.csv
 JBA/Ghana/E689982/combined/keys_data/areaperil_dict.csv
+JBA/Nepal/E505423/combined/model_data/footprint.csv
+JBA/Nepal/E505423/combined/keys_data/areaperil_dict.csv
+JBA/Nepal/E505423/combined/keys_data/areaperil_dict.parquet
+JBA/Nepal/E151185/combined/model_data/footprint.csv
+JBA/Nepal/E151185/combined/keys_data/areaperil_dict.csv
+JBA/Nepal/E151185/combined/keys_data/areaperil_dict.parquet
+JBA/Nepal/E432557/combined/keys_data/areaperil_dict.csv
