--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,8 +2,8 @@ name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 
 on: [push] 
 jobs: 
-  Explore-GitHub-Actions 
-    runs-on: ubuntu-latest 
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
     steps: 
       - run: echo "The job was automatically triggered by a ${{ github.event_name }} event." 
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
