fix syntax errors

--- a/JBA/Ghana/E635900/combined/meta-data/model_settings.json
+++ b/JBA/Ghana/E635900/combined/meta-data/model_settings.json
@@ -6,8 +6,8 @@
 	 "event_set":{
             "name": "",
             "desc": "",
-            "default": "",
-            
+            "default": ""
+
 	 },
         "event_occurrence_id":{
             "name": "",
