--- a/IPE/FranceHail/meta-data/model_settings.json
+++ b/IPE/FranceHail/meta-data/model_settings.json
@@ -1,5 +1,7 @@
 {
-    "version": "",
-    "name": "France Hailstorm - Historical Event 'Ela', 6-10 June, 2014",
-    "description": "France Hailstorm - Historical Event 'Ela', 6-10 June, 2014."
+  "version": "",
+  "name": "France Hailstorm - Historical Event 'Ela', 6-10 June, 2014",
+  "description": "France Hailstorm - Historical Event 'Ela', 6-10 June, 2014.",
+  "model_settings": {},
+  "lookup_settings": {}
 }
