--- a/JBA/Nepal/E432557/combined/meta-data/model_settings.json
+++ b/JBA/Nepal/E432557/combined/meta-data/model_settings.json
@@ -1,5 +1,10 @@
 {
     "version": "",
     "name": "Southeast Nepal 100-year flood.",
-    "description": "Combined river and surface water flooding - Southeast Nepal 1-in-100-year representative scenario."
+    "description": "Combined river and surface water flooding - Southeast Nepal 1-in-100-year representative scenario.",
+    "model_settings":{},
+    "lookup_settings":{},
+    "data_settings": {
+        "group_fields": ["PortNumber", "AccNumber", "LocNumber"]
+    }
 }
