--- a/JBA/Philippines-Taiwan/combined-undefended/meta-data/model_settings.json
+++ b/JBA/Philippines-Taiwan/combined-undefended/meta-data/model_settings.json
@@ -1,5 +1,10 @@
 {
     "version": "",
     "name": "Typhoon Gaemi flooding, Philippines July 2024 (undefended).",
-    "description": "Typhoon Gaemi flooding, Philippines July 2024 (undefended scenario). Includes combined river and surface water flooding."
+    "description": "Typhoon Gaemi flooding, Philippines July 2024 (undefended scenario). Includes combined river and surface water flooding.",
+    "model_settings":{},
+    "lookup_settings":{},
+    "data_settings": {
+        "group_fields": ["PortNumber", "AccNumber", "LocNumber"]
+    }
 }
